--- a/Frontend/Spotify Clone/styles/artistlogin.css
+++ b/Frontend/Spotify Clone/styles/artistlogin.css
@@ -9,9 +9,7 @@ body {
   background-color: #343434;
   font-family: "Montserrat", sans-serif;
 }
-input {
-  color: white;
-}
+
 header {
   background-color: var(--background-press);
   padding: 30px 0 px 30px 51px;
@@ -32,7 +30,7 @@ section {
 section .main {
   padding: 32px;
   width: 734px;
-  height: 1050px;
+  height: 910px;
   background: var(--background-press);
   border-radius: 5px;
 }
@@ -184,44 +182,23 @@ section .main .log-in a {
   text-decoration: underline;
 }
 
-.main .haveaccount {
-  margin-top: 10px;
+.main .last {
+  margin: 10px 0;
   text-align: center;
-  display: flex;
-  justify-content: center;
 }
-.main .haveaccount span {
+.main .last span {
   color: #a7a7a7;
   margin-right: 3px;
 }
 
-.main .haveaccount a {
+.main .last a {
   color: var(--text-base);
   text-decoration: underline;
-}
-.log-in .name {
-  display: flex;
-  gap: 10px;
-  width: 324px;
-}
-.log-in .name .firstname,
-.log-in .name .lastname {
-  width: 50%;
-}
-.log-in .name .firstname input,
-.log-in .name .lastname input {
-  width: 100%;
-}
-section .log-in form #PasswordError {
-  color: #bbb8b8c7;
-  display: block;
-  margin-block: 15px;
-  width: 340px;
 }
 
 footer {
   background-color: var(--background-press);
-  padding: 30px 0px 30px 51px;
+  padding: 30px 0 px 30px 51px;
   display: flex;
   justify-content: center;
   padding-block: 20px;
@@ -230,4 +207,7 @@ footer {
 }
 footer span {
   text-decoration: underline;
+}
+input {
+  color: white;
 }
