--- a/Frontend/Spotify Clone/styles/changepassword.css
+++ b/Frontend/Spotify Clone/styles/changepassword.css
@@ -6,22 +6,25 @@
   list-style: none;
 }
 body {
-  background-color: #343434;
+  background-color: var(--background-press);
   font-family: "Montserrat", sans-serif;
 }
 input {
-  color: white;
+  color: var(--text-base);
 }
+
 header {
   background-color: var(--background-press);
   padding: 30px 0 px 30px 51px;
   display: flex;
   justify-content: center;
-  padding: 50px 50px 0 50px;
+  padding: 20px 50px 20px 50px;
 }
 header .logo img {
   width: 80px;
 }
+/* var(--background-press) */
+
 section {
   background: linear-gradient(rgba(11, 1, 1, 0.9) 0%, rgb(0, 0, 0) 100%);
   display: flex;
@@ -32,7 +35,7 @@ section {
 section .main {
   padding: 32px;
   width: 734px;
-  height: 1050px;
+  height: 550px;
   background: var(--background-press);
   border-radius: 5px;
 }
@@ -212,16 +215,10 @@ section .main .log-in a {
 .log-in .name .lastname input {
   width: 100%;
 }
-section .log-in form #PasswordError {
-  color: #bbb8b8c7;
-  display: block;
-  margin-block: 15px;
-  width: 340px;
-}
 
 footer {
   background-color: var(--background-press);
-  padding: 30px 0px 30px 51px;
+  padding: 30px 0 px 30px 51px;
   display: flex;
   justify-content: center;
   padding-block: 20px;
