--- a/Frontend/Spotify Clone/artist/style/css/master.css
+++ b/Frontend/Spotify Clone/artist/style/css/master.css
@@ -46,8 +46,13 @@ ul {
 }
 /* Start SideBar */
 .sidebar {
-  width: 250px;
+  width: 400px;
   box-shadow: 0 0 10px #ddd;
+}
+.sidebar button {
+  border: none;
+  background-color: white;
+  width: 100%;
 }
 .sidebar > h3 {
   margin-bottom: 50px;
@@ -77,8 +82,15 @@ ul {
   margin-bottom: 5px;
 }
 .sidebar ul li a:hover,
-.sidebar ul li a.active {
+.sidebar ul li a.active,
+.sidebar ul li:hover{
   background-color: #f6f6f6;
+}
+.panel {
+  display: none;
+}
+.activesection {
+  display: block;
 }
 
 @media (max-width: 767px) {
@@ -509,10 +521,10 @@ ul {
 }
 /* End Social Widget */
 /* Start Project Table Widget */
-.projects  {
+.projects {
   grid-column: 1/-1;
 }
-.projects h2{
+.projects h2 {
   margin-top: 0;
   margin-bottom: 20px;
 }
@@ -705,17 +717,17 @@ ul {
   transform: scale(1);
 }
 /* Start Bakcup widget */
-.Backup-control  input[type="radio"] {
+.Backup-control input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
   display: none;
 }
-.Backup-control .date  label{
+.Backup-control .date label {
   padding-left: 30px;
   cursor: pointer;
   position: relative;
 }
-.Backup-control .date  label::before {
+.Backup-control .date label::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -727,7 +739,7 @@ ul {
   border-radius: 50%;
   border: 2px solid var(--grey-color);
 }
-.Backup-control .date  label::after{
+.Backup-control .date label::after {
   content: "";
   position: absolute;
   left: 12px; /* listen to record */
@@ -740,10 +752,10 @@ ul {
   transition: 0.3s;
   transform: scale(0);
 }
-.Backup-control .date input[type="radio"]:checked +label::before {
+.Backup-control .date input[type="radio"]:checked + label::before {
   border-color: var(--blue-color);
 }
-.Backup-control .date input[type="radio"]:checked +label::after{
+.Backup-control .date input[type="radio"]:checked + label::after {
   transform: scale(1);
 }
 .Backup-control .servers {
@@ -751,8 +763,8 @@ ul {
   padding-top: 20px;
   gap: 10px;
 }
-@media(max-width:767px){
-  .Backup-control .servers{
+@media (max-width: 767px) {
+  .Backup-control .servers {
     flex-wrap: wrap;
   }
 }
@@ -771,7 +783,7 @@ ul {
 /* End Settings Page*/
 /* Start Profile Page  */
 
-@media(max-width:767px){
+@media (max-width: 767px) {
   .profile-page .overview {
     flex-direction: column;
   }
@@ -779,15 +791,14 @@ ul {
 .profile-page .avatar-box {
   width: 300px;
 }
-@media(min-width:768px){
+@media (min-width: 768px) {
   .profile-page .avatar-box {
     border-right: 1px solid #eee;
   }
 }
-.profile-page .avatar-box >img{
+.profile-page .avatar-box > img {
   width: 120px;
   height: 120px;
-
 }
 .profile-page .avatar-box .level {
   height: 6px;
@@ -804,19 +815,19 @@ ul {
   border-radius: 6px;
 }
 
-.profile-page .info-box .box{
+.profile-page .info-box .box {
   flex-wrap: wrap;
   border-bottom: 1px solid #eee;
   transform: 0.3s;
 }
-.profile-page .info-box .box:hover{
+.profile-page .info-box .box:hover {
   background-color: #f9f9f9;
 }
-.profile-page .info-box .box > div{
+.profile-page .info-box .box > div {
   min-width: 250px;
   padding: 10px 0 0;
 }
-.profile-page .info-box h4{
+.profile-page .info-box h4 {
   font-weight: normal;
 }
 .profile-page .info-box .toggle-switch {
@@ -837,29 +848,28 @@ ul {
 }
 
 /* Start Other Data */
-@media(max-width:767px){
+@media (max-width: 767px) {
   .profile-page .other-data {
     flex-direction: column;
   }
 }
 .profile-page .skills-card {
   flex-grow: 1;
-
 }
-.profile-page .skills-card  ul li {
-  padding: 15px 0 ;
+.profile-page .skills-card ul li {
+  padding: 15px 0;
 }
-.profile-page .skills-card  ul li:not(:last-child){
+.profile-page .skills-card ul li:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
-.profile-page .skills-card  ul li span {
+.profile-page .skills-card ul li span {
   display: inline-flex;
   padding: 4px 10px;
   background-color: #eee;
   border-radius: 6px;
   font-size: 14px;
 }
-.profile-page .skills-card  ul li span:not(:last-child){
+.profile-page .skills-card ul li span:not(:last-child) {
   margin-right: 5px;
 }
 .profile-page .activities {
@@ -875,14 +885,14 @@ ul {
   height: 64px;
   margin-right: 10px;
 }
-@media(min-width:768px){
+@media (min-width: 768px) {
   .profile-page .activities .date {
     margin-left: auto;
     text-align: right;
   }
 }
-@media(max-width:767px){
-  .profile-page .activities  {
+@media (max-width: 767px) {
+  .profile-page .activities {
     flex-direction: column;
   }
   .profile-page .activities img {
@@ -897,7 +907,7 @@ ul {
 /* End Profile Page  */
 /* Start projects-page  */
 .projects-page {
-  grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
 
 .projects-page .project .date {
@@ -909,9 +919,9 @@ ul {
   font-weight: normal;
 }
 
-.projects-page .project .team{
+.projects-page .project .team {
   position: relative;
-  min-height:80px;
+  min-height: 80px;
 }
 .projects-page .project .team img {
   width: 40px;
@@ -919,28 +929,25 @@ ul {
   border-radius: 50%;
   border: 2px solid white;
 }
-.projects-page .project .team a{
+.projects-page .project .team a {
   position: absolute;
   left: 0;
   bottom: 0;
   transition: 0.3s;
 }
-.projects-page .project .team a:nth-child(2){
+.projects-page .project .team a:nth-child(2) {
   left: 25px;
 }
-.projects-page .project .team a:nth-child(3){
+.projects-page .project .team a:nth-child(3) {
   left: 50px;
-  
 }
-.projects-page .project .team a:nth-child(4){
+.projects-page .project .team a:nth-child(4) {
   left: 75px;
-  
 }
-.projects-page .project .team a:nth-child(5){
+.projects-page .project .team a:nth-child(5) {
   left: 100px;
-  
 }
-.projects-page .project .team a:hover{
+.projects-page .project .team a:hover {
   z-index: 100;
   padding: 5px;
 }
@@ -954,14 +961,13 @@ ul {
 .projects-page .project .do span {
   padding: 3px 8px;
   margin-left: 5px;
-  width:fit-content ;
+  width: fit-content;
 }
 
 .projects-page .project .info {
   border-top: 1px solid #eee;
   margin-top: 15px;
   padding-top: 15px;
-
 }
 
 .projects-page .project .prog {
@@ -969,7 +975,6 @@ ul {
   width: 260px;
   position: relative;
   border-radius: 6px;
-
 }
 .projects-page .project .prog span {
   position: absolute;
@@ -982,11 +987,10 @@ ul {
   border-top: 1px solid #eee;
   margin-top: 15px;
   padding-top: 15px;
-
 }
-@media(max-width:767px){
+@media (max-width: 767px) {
   .projects-page {
-    grid-template-columns: minmax(200px , 1fr);
+    grid-template-columns: minmax(200px, 1fr);
     margin-left: 10px;
     margin-right: 10px;
     gap: 10px;
@@ -994,20 +998,20 @@ ul {
   .projects-page .project .do {
     flex-direction: column;
   }
-  .projects-page .project .do span:not(:last-child){
+  .projects-page .project .do span:not(:last-child) {
     margin-bottom: 15px;
   }
   .projects-page .project .info {
     flex-direction: column;
   }
-  .projects-page .project .prog{
+  .projects-page .project .prog {
     margin-bottom: 15px;
   }
 }
 /* End projects-page  */
 /* Start Courses Page  */
 .courses-page {
-  grid-template-columns: repeat(auto-fill , minmax(300px ,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 .courses-page .cover {
   border-radius: 6px;
@@ -1022,24 +1026,23 @@ ul {
   top: 20px;
   border: 2px solid white;
 }
-.courses-page .info  {
-  line-height:1.6;
+.courses-page .info {
+  line-height: 1.6;
 }
-.courses-page .description  {
+.courses-page .description {
   border-top: 1px solid #eee;
   font-size: 13px;
-
 }
-.courses-page .description .title{
+.courses-page .description .title {
   position: absolute;
   bottom: 35px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 13px;
 }
-@media(max-width:767px){
+@media (max-width: 767px) {
   .courses-page {
-    grid-template-columns: minmax(200px , 1fr);
+    grid-template-columns: minmax(200px, 1fr);
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -1047,9 +1050,9 @@ ul {
 /* End Courses Page  */
 /* Start Friends Page  */
 .friends-page {
-  grid-template-columns: repeat(auto-fill ,minmax(300px ,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
-.friends-page .contact  {
+.friends-page .contact {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -1091,9 +1094,9 @@ ul {
   font-size: 40px;
   opacity: 0.2;
 }
-@media(max-width:767px){
+@media (max-width: 767px) {
   .friends-page {
-    grid-template-columns: minmax(200px ,1fr);
+    grid-template-columns: minmax(200px, 1fr);
     gap: 10px;
     margin-inline: 10px;
   }
@@ -1136,19 +1139,20 @@ ul {
   background-color: var(--blue-alt-color);
 }
 @keyframes go-up {
-  0% ,100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
     transform: translateY(-5px);
   }
 }
-.files-page .files-static .upload:hover i{
+.files-page .files-static .upload:hover i {
   animation: go-up 0.8s infinite;
 }
-.files-page .files-content  {
+.files-page .files-content {
   flex: 1;
-  grid-template-columns: repeat(auto-fill , minmax(200px , 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 .files-page .files-content img {
   width: 64px;
@@ -1156,12 +1160,12 @@ ul {
   transition: 0.3s;
 }
 .files-page .files-content .info {
-  border-top: 1px solid #eee ;
-} 
+  border-top: 1px solid #eee;
+}
 .files-page .files-content .file:hover img {
   transform: rotate(5deg);
 }
-@media(max-width:767px){
+@media (max-width: 767px) {
   .files-page {
     flex-direction: column;
     align-items: normal;
@@ -1228,3 +1232,152 @@ ul {
 }
 
 /* End Plan Page  */
+
+/* Start add album */
+#add-album {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+section #add-album label {
+  font-size: 25px;
+  margin-bottom: 8px;
+  display: inline-block;
+  font-weight: bold;
+}
+section #add-album input {
+  display: block;
+  padding: 14px;
+  width: 600px;
+  margin-bottom: 15px;
+  font-size: 15px;
+  font-weight: 500;
+  /* background: rgb(18, 18, 18); */
+  outline: none;
+  border-color: transparent;
+  border-bottom: 1px solid black;
+  appearance: none;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #878787;
+}
+
+#add-album .inputcontainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  font-size: 20px;
+  font-weight: bold;
+}
+section .song-container {
+  display: flex;
+  flex-direction: column;
+}
+section .song-container input {
+  display: block;
+  padding: 14px;
+  width: 300px;
+  margin-bottom: 15px;
+  font-size: 15px;
+  font-weight: 500;
+  /* background: rgb(18, 18, 18); */
+  outline: none;
+  border-color: transparent;
+  border-bottom: 1px solid black;
+  appearance: none;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #878787;
+}
+section .song-container .inputs {
+  display: flex;
+  gap: 20px;
+}
+.button {
+  position: relative;
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: 1px solid #34974d;
+  background-color: #3aa856;
+  border-radius: 10px;
+}
+
+.button,
+.button__icon,
+.button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(30px);
+  color: #fff;
+  font-weight: 600;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(109px);
+  height: 100%;
+  width: 39px;
+  background-color: #34974d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.button .svg {
+  width: 30px;
+  stroke: #fff;
+}
+
+.button:hover {
+  background: #34974d;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 148px;
+  transform: translateX(0);
+}
+
+.button:active .button__icon {
+  background-color: #2e8644;
+}
+
+.button:active {
+  border: 1px solid #2e8644;
+}
+/* end add album */
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+}
+
+table th, table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+table th {
+  background: #f8f8f8;
+  font-weight: bold;
+}
+
+table tbody tr:nth-child(even) {
+  background: #f2f2f2;
+}
+
+table tbody tr:hover {
+  background: #e9e9e9;
+}
