--- a/Frontend/Spotify Clone/styles/playlist.css
+++ b/Frontend/Spotify Clone/styles/playlist.css
@@ -6,7 +6,9 @@ body {
   background-color: #121212;
   font-family: "Montserrat", sans-serif;
 }
-
+input {
+  color: white;
+}
 .sidebar {
   position: fixed;
   left: 0;
@@ -85,13 +87,13 @@ body {
 .sidebar .navigation .playlist-container:hover {
   background: var(--sidebar-scroll-bg);
 }
-
-
 .sidebar-scroll {
   height: 200px;
   width: 100%;
   overflow-y: auto;
 }
+
+
 
 .create-playlist {
   background: var(--sidebar-scroll-bg);
@@ -129,6 +131,7 @@ body {
 }
 .create-playlist .hint-container form {
   margin-top: 10px;
+
 }
 .create-playlist .hint-container form input {
   display: block;
@@ -363,6 +366,216 @@ body {
   border-color: #636363;
 }
 
+
+.album {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-color: #181818;
+  
+  background: linear-gradient(to bottom, #8e8b8b8a, #000);
+  
+}
+.album-header{
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  margin-bottom: 30px;
+
+}
+.album-image-box .album-image {
+  width: 250px;
+  height: 250px;
+  margin-right: 21px;
+  
+  border-radius: 25px;
+}
+.album-content h1 {
+  padding-block: 20px;
+  font-weight: bolder;
+  font-size: 6rem;
+  white-space: nowrap;
+}
+.album-content .album-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+.album-content .album-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.album-playlist {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  
+}
+.album-playlist  .track {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.album-playlist .track-icons {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+  margin-bottom: 30px;
+}
+.album-playlist .track-icons i {
+  font-size: 40px;
+  color: #7a7a7a;
+  transition: all ease 0.4s
+}
+.album-playlist .track-icons i:hover {
+  color: white;
+  transform: scale(1.2);
+}
+.track-icons .play .fa {
+  padding: 18px;
+  background-color: #1db954;
+  border-radius: 100%;
+  color: #000;
+  transition: all ease 0.4s;
+}
+.track-icons .play:hover .fa {
+  background-color: #26db66;
+  transform: scale(1.2);
+}
+.album-playlist .track-name{
+  display: flex;
+  gap: 15px;
+  padding-inline: 20px;
+  color: #7a7a7a;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.album-playlist  ol {
+  margin: 20px 0;
+  padding: 0;
+  width: 100%;
+}
+.album-playlist  li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding: 30px 50px;
+
+  height: 80px;
+}
+
+.album-playlist  li:hover {
+  background-color: #4d494946;
+}
+.album-playlist  .song-title {
+  font-weight: bold;
+}
+.album-playlist  .song-title .artistName{
+  color: #7a7a7a;
+}
+.album-playlist  .song-title .artistName:hover {
+  color: white;
+  border-bottom: 1px solid #fff;
+}
+.album-playlist  .duration  {
+  display: flex;
+  flex-direction: row;
+  color: #666;
+  text-align: center;
+}
+.album-playlist  .duration .time {
+  margin-inline: 30px;
+}
+.album-playlist  .duration i{
+  opacity: 0;
+} 
+.album-playlist  li:hover .duration i {
+  opacity: 1;
+}
+.album-playlist .add-card {
+  margin-bottom: 100px;
+}
+.album-playlist .add-card label {
+  font-size: 40px;
+  font-weight: 800;
+  letter-spacing: 3px;
+}
+.album-playlist .add-card input {
+  display: block;
+  padding: 14px;
+  width: 500px;
+  height: 2.6em;
+  margin: 20px;
+  font-size: 15px;
+  font-weight: 500;
+  background: rgb(18, 18, 18);
+  outline: none;
+  border-color: transparent;
+  border-bottom: 1px solid black;
+  appearance: none;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #878787;
+}
+
+.album-playlist .add-card .inputcontainer {
+  display: flex;
+  text-align: center;
+}
+.album-playlist .add-card .inputcontainer button {
+  --color: #3be477;
+  font-family: inherit;
+  display: inline-block;
+  width: 6em;
+  height: 2.6em;
+  line-height: 2.5em;
+  overflow: hidden;
+  cursor: pointer;
+  margin: 20px;
+  font-size: 17px;
+  z-index: 1;
+  color: var(--color);
+  border: 2px solid var(--color);
+  border-radius: 6px;
+  position: relative;
+}
+
+
+.album-playlist .add-card .inputcontainer button::before {
+  position: absolute;
+  content: "";
+  background: var(--color);
+  width: 150px;
+  height: 200px;
+  z-index: -1;
+  border-radius: 50%;
+}
+
+.album-playlist .add-card .inputcontainer button:hover {
+  color: white;
+}
+
+.album-playlist .add-card .inputcontainer button:before {
+  top: 100%;
+  left: 100%;
+  transition: 0.3s all;
+}
+
+.album-playlist .add-card .inputcontainer button:hover::before {
+  top: -30px;
+  left: -30px;
+}
+
+
+
 .music-player {
   --primary-color: #ddd;
   --secondary-color: #999;
@@ -447,11 +660,14 @@ i:hover {
   gap: 0.5em;
   padding: 10px;
   color: var(--secondary-color);
+  
+
 }
 .control-buttons {
   display: flex;
   align-items: center;
   gap: 2em;
+  
 }
 .play-pause {
   display: inline-block;
