update user interface and show all features in index page

--- a/Frontend/Spotify Clone/styles/album.css
+++ b/Frontend/Spotify Clone/styles/album.css
@@ -256,7 +256,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
-  
+  margin-bottom: 100px;
 }
 .album-playlist  .track {
   display: flex;
