--- a/Frontend/Spotify Clone/styles/artist.css
+++ b/Frontend/Spotify Clone/styles/artist.css
@@ -72,33 +72,6 @@ body {
   margin-bottom: 25px;
   text-align: left;
 }
-
-.hint-container {
-  background: dodgerblue;
-  padding: 15px;
-  border-radius: 15px;
-  width: 363px;
-  position: absolute;
-  top: 245px;
-  left: 380px;
-  display: none;
-}
-.create-playlist button:active .hint-container {
-  display: block;
-}
-.hint-container h2 {
-  font-size: 20px;
-  font-weight: bold;
-}
-.hint-container .buttons {
-  display: flex;
-  justify-content: flex-end;
-  gap: 15px;
-  margin-top: 30px;
-}
-.create-playlist .hint-container .hint .buttons button a {
-  color: black;
-}
 .sidebar-scroll::-webkit-scrollbar {
   background: transparent;
 }
@@ -168,8 +141,9 @@ body {
 
 .main-container {
   margin-left: 400px;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
   padding-block: 10px;
+  color: var(--text-base);
 }
 
 .topbar {
@@ -236,6 +210,173 @@ body {
 .topbar .navbar button:focus {
   background-color: #f2f2f2;
 }
+.main-container .artist-header {
+  position: relative;
+  color: var(--text-base);
+}
+.artist-header .artist-info h2 {
+  position: absolute;
+  top: 120px;
+  left: 20px;
+  font-size: 60px;
+  letter-spacing: 5px;
+  font-weight: 900;
+}
+.artist-header .artist-info p {
+  position: absolute;
+  top: 260px;
+  left: 20px;
+  font-size: 20px;
+  letter-spacing: 5px;
+  font-weight: bolder;
+}
+.artist-header .image-container img {
+  width: 100%;
+  height: 40vh;
+  border-radius: 15px;
+}
+
+.album {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-color: #181818;
+
+  background: linear-gradient(to bottom, #8e8b8b8a, #000);
+}
+.album-header {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+.album-image-box .album-image {
+  width: 250px;
+  height: 250px;
+  margin-right: 21px;
+
+  border-radius: 25px;
+}
+.album-content h1 {
+  padding-block: 20px;
+  font-weight: bolder;
+  font-size: 6rem;
+  white-space: nowrap;
+}
+.album-content .album-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.album-content .album-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.artist-songs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  margin-bottom: 100px;
+}
+.artist-songs .track {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.artist-songs .track-icons {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+  margin-bottom: 30px;
+}
+.artist-songs .track-icons i {
+  font-size: 40px;
+  color: #7a7a7a;
+  transition: all ease 0.4s;
+}
+.artist-songs .track-icons i:hover {
+  color: white;
+  transform: scale(1.2);
+}
+.track-icons .play .fa {
+  padding: 18px;
+  background-color: #1db954;
+  border-radius: 100%;
+  color: #000;
+  transition: all ease 0.4s;
+}
+.track-icons button {
+  border: 1px solid rgba(126, 125, 125, 0.799);
+  border-radius: 50px;
+  padding-inline: 15px;
+  padding-block: 5px;
+}
+.track-icons button:hover {
+  border-color: white;
+}
+.track-icons .play:hover .fa {
+  background-color: #26db66;
+  transform: scale(1.2);
+}
+.artist-songs .track-name {
+  display: flex;
+  gap: 15px;
+  padding-inline: 20px;
+  color: #7a7a7a;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.artist-songs ol {
+  margin: 20px 0;
+  padding: 0;
+  width: 100%;
+}
+.artist-songs li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 30px 50px;
+
+  height: 80px;
+}
+
+.artist-songs li:hover {
+  background-color: #4d494946;
+}
+.artist-songs .song-title {
+  font-weight: bold;
+}
+.artist-songs .song-title .artistName {
+  color: #7a7a7a;
+}
+.artist-songs .song-title .artistName:hover {
+  color: white;
+  border-bottom: 1px solid #fff;
+}
+.artist-songs .duration {
+  display: flex;
+  flex-direction: row;
+  color: #666;
+  text-align: center;
+}
+.artist-songs .duration .time {
+  margin-inline: 30px;
+}
+.artist-songs .duration i {
+  opacity: 0;
+}
+.artist-songs li:hover .duration i {
+  opacity: 1;
+}
+
+
 .popular-artists {
   display: flex;
   flex-direction: column;
@@ -296,7 +437,7 @@ body {
 }
 .spotify-playlists .list .item {
   flex: 0 0 auto;
-  width: 200px;
+  width: 225px;
   padding: 15px;
   background-color: #181818;
   border-radius: 6px;
@@ -348,9 +489,6 @@ body {
 .spotify-playlists hr {
   margin: 70px 0px 0px;
   border-color: #636363;
-}
-.Popular-Playlist {
-  margin-bottom: 100px;
 }
 .preview {
   position: fixed;
