--- a/Frontend/Spotify Clone/styles/album.css
+++ b/Frontend/Spotify Clone/styles/album.css
@@ -375,5 +375,49 @@ body {
   cursor: pointer;
 }
 
+/* Modal styles */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 500px;
+  border-radius:20px; /* Could be more or less, depending on screen size */
+}
+.modal-content button {
+  border: 1px solid black;
+  border-radius:15px;
+  padding-block: 10px;
+  padding-inline: 15px;
+  margin-top: 20px;
+}
+.modal-content p  {
+  font-size: 25px;
+  font-weight: bold;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
