--- a/Frontend/Spotify Clone/styles/artist.css
+++ b/Frontend/Spotify Clone/styles/artist.css
@@ -524,6 +524,7 @@ body {
 }
 .spotify-playlists .list .item img {
   width: 100%;
+  height: 170px;
   border-radius: 6px;
   margin-bottom: 10px;
 }
