--- a/Frontend/Spotify Clone/styles/index.css
+++ b/Frontend/Spotify Clone/styles/index.css
@@ -248,6 +248,112 @@ body {
   color: var(--text-base);
 }
 
+/* .spotify-playlists {
+  padding-inline: var(--content-spacing);
+}
+
+.spotify-playlists .title {
+  display: flex;
+  justify-content: space-between;
+  color: var(--text-base);
+  padding: 10px;
+}
+.spotify-playlists .title button {
+  color: #636363;
+  margin-block: 20px;
+}
+.spotify-playlists .title button:hover {
+  text-decoration: underline;
+}
+.spotify-playlists .list .item .artist-image {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.spotify-playlists .list .artist-card {
+  padding: 0;
+}
+
+.spotify-playlists h2 {
+  color: #ffffff;
+  font-weight: bolder;
+  font-size: 22px;
+  margin-block: 20px;
+}
+.spotify-playlists h2:hover {
+  text-decoration: underline;
+}
+.spotify-playlists .list {
+  display: flex;
+  gap: 8px;
+  width: auto;
+  overflow: hidden;
+}
+
+.spotify-playlists .list::-webkit-scrollbar {
+  background: transparent;
+}
+.spotify-playlists .list::-webkit-scrollbar-thumb {
+  background: #ccc;
+  width: 5px;
+}
+.spotify-playlists .list .item {
+  flex: 0 0 auto;
+  width: 175px;
+  padding: 15px;
+  background-color: #181818;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all ease 0.4s;
+}
+.spotify-playlists .list .item:hover {
+  background-color: #252525;
+}
+.spotify-playlists .list .item img {
+  width: 160px;
+  height: 150px;
+  border-radius: 6px;
+  margin-bottom: 10px;
+}
+.spotify-playlists .list .item .play {
+  position: relative;
+}
+.spotify-playlists .list .item .play .fa {
+  position: absolute;
+  right: 10px;
+  top: -60px;
+  padding: 18px;
+  background-color: #1db954;
+  border-radius: 100%;
+  color: #000;
+  opacity: 0;
+  transition: all ease 0.4s;
+}
+.spotify-playlists .list .item:hover .play .fa {
+  opacity: 1;
+  transform: translateY(-20px);
+}
+.spotify-playlists .list .item h4 {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+
+  margin-bottom: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.spotify-playlists .list .item p {
+  color: #989898;
+  font-size: 12px;
+  line-height: 20px;
+  font-weight: 600;
+}
+.spotify-playlists hr {
+  margin: 70px 0px 0px;
+  border-color: #636363;
+} */
+
 .spotify-playlists {
   padding-inline: var(--content-spacing);
 }
@@ -312,6 +418,7 @@ body {
 }
 .spotify-playlists .list .item img {
   width: 100%;
+  height: 170px;
   border-radius: 6px;
   margin-bottom: 10px;
 }
