--- a/Frontend/Spotify Clone/styles/artist2.css
+++ b/Frontend/Spotify Clone/styles/artist2.css
@@ -273,16 +273,27 @@ body {
   margin: 0px 20px;
   width: auto;
 }
-.topbar .navbar button {
-  background-color: #ffffff;
-  color: #000000;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 5px 15px;
+.topbar .prev-next-buttons button:last-of-type {
+  color: #7a7a7a;
+  cursor: not-allowed;
+  width: 34px;
+  height: 34px;
+  border-radius: 100%;
+  font-size: 18px;
   border: 0px;
-  border-radius: 40px;
+  background-color: #090909;
+  margin-right: 10px;
+}
+.topbar .prev-next-buttons button:first-of-type {
+  color: #7a7a7a;
   cursor: pointer;
-  margin-left: 20px;
+  width: 34px;
+  height: 34px;
+  border-radius: 100%;
+  font-size: 18px;
+  border: 0px;
+  background-color: #090909;
+  margin-right: 10px;
 }
 .topbar .navbar button:hover,
 .topbar .navbar button:active,
