--- a/Frontend/Spotify Clone/styles/playlist.css
+++ b/Frontend/Spotify Clone/styles/playlist.css
@@ -76,11 +76,11 @@ input {
   width: 48px;
   height: 48px;
 }
-.sidebar .navigation .playlist-container .creator-info{
+.sidebar .navigation .playlist-container .creator-info {
   color: #8f8f8f;
   font-size: 15px;
 }
-.sidebar .navigation .playlist-container .playlistName{
+.sidebar .navigation .playlist-container .playlistName {
   font-size: 20px;
   font-weight: bold;
 }
@@ -92,8 +92,6 @@ input {
   width: 100%;
   overflow-y: auto;
 }
-
-
 
 .create-playlist {
   background: var(--sidebar-scroll-bg);
@@ -131,7 +129,6 @@ input {
 }
 .create-playlist .hint-container form {
   margin-top: 10px;
-
 }
 .create-playlist .hint-container form input {
   display: block;
@@ -227,9 +224,20 @@ input {
   background-color: #101010;
   padding: 14px 30px;
 }
-.topbar .prev-next-buttons button {
+.topbar .prev-next-buttons button:last-of-type {
   color: #7a7a7a;
   cursor: not-allowed;
+  width: 34px;
+  height: 34px;
+  border-radius: 100%;
+  font-size: 18px;
+  border: 0px;
+  background-color: #090909;
+  margin-right: 10px;
+}
+.topbar .prev-next-buttons button:first-of-type {
+  color: #7a7a7a;
+  cursor: pointer;
   width: 34px;
   height: 34px;
   border-radius: 100%;
@@ -367,28 +375,25 @@ input {
   border-color: #636363;
 }
 
-
 .album {
   display: flex;
   flex-direction: column;
   color: white;
   background-color: #181818;
-  
+
   background: linear-gradient(to bottom, #8e8b8b8a, #000);
-  
 }
-.album-header{
+.album-header {
   display: flex;
   flex-direction: row;
   padding: 20px;
   margin-bottom: 30px;
-
 }
 .album-image-box .album-image {
   width: 250px;
   height: 250px;
   margin-right: 21px;
-  
+
   border-radius: 25px;
 }
 .album-content h1 {
@@ -417,9 +422,8 @@ input {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
-  
 }
-.album-playlist  .track {
+.album-playlist .track {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -433,7 +437,7 @@ input {
 .album-playlist .track-icons i {
   font-size: 40px;
   color: #7a7a7a;
-  transition: all ease 0.4s
+  transition: all ease 0.4s;
 }
 .album-playlist .track-icons i:hover {
   color: white;
@@ -450,7 +454,7 @@ input {
   background-color: #26db66;
   transform: scale(1.2);
 }
-.album-playlist .track-name{
+.album-playlist .track-name {
   display: flex;
   gap: 15px;
   padding-inline: 20px;
@@ -459,52 +463,50 @@ input {
   font-weight: 600;
 }
 
-.album-playlist  ol {
+.album-playlist ol {
   margin: 20px 0;
   padding: 0;
   width: 100%;
 }
-.album-playlist  li {
+.album-playlist li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+
   padding: 30px 50px;
 
   height: 80px;
 }
 
-.album-playlist  li:hover {
+.album-playlist li:hover {
   background-color: #4d494946;
 }
-.album-playlist  .song-title {
+.album-playlist .song-title {
   font-weight: bold;
 }
-.album-playlist  .song-title .artistName{
+.album-playlist .song-title .artistName {
   color: #7a7a7a;
 }
-.album-playlist  .song-title .artistName:hover {
+.album-playlist .song-title .artistName:hover {
   color: white;
   border-bottom: 1px solid #fff;
 }
-.album-playlist  .duration  {
+.album-playlist .duration {
   display: flex;
   flex-direction: row;
   color: #666;
   text-align: center;
 }
-.album-playlist  .duration .time {
+.album-playlist .duration .time {
   margin-inline: 30px;
 }
-.album-playlist  .duration i{
+.album-playlist .duration i {
   opacity: 0;
-} 
-.album-playlist  li:hover .duration i {
+}
+.album-playlist li:hover .duration i {
   opacity: 1;
 }
-.album-playlist .add-card {
-  margin-bottom: 100px;
-}
+
 .album-playlist .add-card label {
   font-size: 40px;
   font-weight: 800;
@@ -549,7 +551,6 @@ input {
   position: relative;
 }
 
-
 .album-playlist .add-card .inputcontainer button::before {
   position: absolute;
   content: "";
@@ -575,7 +576,75 @@ input {
   left: -30px;
 }
 
+/* start search song  */
 
+.track-list {
+  width: 100%;
+  padding: 20px;
+}
+.track-list {
+  margin-bottom: 100px;
+}
+
+.track-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  /* background-color: #282828; */
+  border-radius: 8px;
+}
+
+.track-item:hover {
+  background-color: #3e3e3e;
+}
+
+.track-info {
+  display: flex;
+  align-items: center;
+}
+
+.track-info img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+.track-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.track-title {
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.track-artist,
+.track-album {
+  color: #b3b3b3;
+  font-size: 14px;
+  text-align: center;
+}
+
+.track-actions .track-add-button {
+  padding: 8px 15px;
+  /* background-color: #1db954; */
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.track-actions .track-add-button:hover {
+  background-color: #1ed760;
+  border: 1px solid #1ed760;
+}
+/* end search song  */
 
 .music-player {
   --primary-color: #ddd;
@@ -661,14 +730,11 @@ i:hover {
   gap: 0.5em;
   padding: 10px;
   color: var(--secondary-color);
-  
-
 }
 .control-buttons {
   display: flex;
   align-items: center;
   gap: 2em;
-  
 }
 .play-pause {
   display: inline-block;
