--- a/Frontend/Spotify Clone/styles/artist2.css
+++ b/Frontend/Spotify Clone/styles/artist2.css
@@ -273,6 +273,17 @@ body {
   margin: 0px 20px;
   width: auto;
 }
+.topbar .navbar button {
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 15px;
+  border: 0px;
+  border-radius: 40px;
+  cursor: pointer;
+  margin-left: 20px;
+}
 .topbar .prev-next-buttons button:last-of-type {
   color: #7a7a7a;
   cursor: not-allowed;
@@ -300,6 +311,69 @@ body {
 .topbar .navbar button:focus {
   background-color: #f2f2f2;
 }
+/* start logout  */
+
+.topbar .navbar .Btn {
+  display: none;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: 0.3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: #1db954;
+}
+.topbar .navbar .sign {
+  width: 100%;
+  transition-duration: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.topbar .navbar .sign svg {
+  width: 18px;
+}
+.topbar .navbar .sign svg path {
+  fill: black;
+}
+.topbar .navbar .text {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: black;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition-duration: 0.3s;
+}
+.topbar .navbar .Btn:hover {
+  width: 125px;
+  border-radius: 40px;
+  transition-duration: 0.3s;
+  background-color: #1db954;
+}
+.topbar .navbar .Btn:hover .sign {
+  /* width: 30%; */
+  transform: translateX(-45px);
+  transition-duration: 0.3s;
+  padding-left: 20px;
+}
+.topbar .navbar .Btn:hover .text {
+  opacity: 1;
+  width: 70%;
+  transition-duration: 0.3s;
+  padding-right: 10px;
+}
+.topbar .navbar .Btn:active {
+  transform: translate(2px, 2px);
+}
+
+/* end logout  */
 /* .spotify-playlists {
   padding-inline-start: var(--content-spacing);
   margin-block: 25px;
@@ -611,6 +685,7 @@ body {
 }
 .spotify-playlists .list .item img {
   width: 100%;
+  height: 170px;
   border-radius: 6px;
   margin-bottom: 10px;
 }
